[package]
name = "scoop-search"
version = "0.4.8"
authors = ["tokiedokie <42903136+tokiedokie@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
ureq = { version = "*", features = ["json"] }
serde_json = "1.0"