[package]
name = "scoop-search"
version = "0.4.10"
authors = ["tokiedokie <42903136+tokiedokie@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
panic = 'abort'

[dependencies]
ureq = { version = "*", features = ["json"] }
serde_json = "1.0"